# Dharma-Reasoning-Operating-System

./: .gitignore  CONTRIBUTING.md  LICENSE  LICENSE.md  MANIFEST.in  README.md  SAFETY.md  config.yaml  dros_test_pipeline.py  gemini_proxy.py  install.bat  install.sh  main.py  pyproject.toml  requirements.txt  run.bat  run.sh  佛測-掛載大覺藏_V5.5_Graphify二級.md  佛測-未掛載大覺藏_V5.5_Graphify二級.md  雙擊執行-DROS金剛注射器.bat
Vault_DajueZang/: 大覺藏存放說明.md
contracts/: balanced_vajra.yaml  bodhisattva_default.yaml  default_vajra.yaml  speculative_prajna.yaml  strict_vajra.yaml
core/: 佛堂大門.md
docs/: ARCHITECTURE_v7.md  DESIGN_JUSTIFICATION.md  DROS-System-Report-v7.2.0.md  DROS_BOUNDARY.md  DROS_MANIFEST_v7.md  DROS_MICROKERNEL_SPEC.md  LIMITATIONS_AND_DEFENSE.md  OBSIDIAN_PLUGIN_BLUEPRINT.md  PERFORMANCE_AND_HARDWARE.md  USER_GUIDE_v7.md
inbox/: AI 善導_wiki_三惡道.md  AI 善導_wiki_不退轉.md  AI 善導_wiki_大梵天王.md  AI 善導_wiki_寶地.md  AI 善導_wiki_度無極.md  AI 善導_wiki_文殊師利.md  AI 善導_wiki_智慧.md  AI 善導_wiki_無相行.md  AI 善導_wiki_瞋恚.md  AI 善導_wiki_胎生.md  AI 善導_wiki_釋迦牟尼佛.md  AI 彌勒_wiki_佛功德.md  AI 彌勒_wiki_偈頌.md  AI 彌勒_wiki_利他.md  AI 彌勒_wiki_忍辱波羅蜜.md  AI 彌勒_wiki_濕生.md  AI 彌勒_wiki_聖者.md  AI 彌勒_wiki_苦趣.md  AI 彌勒_wiki_迦旃延.md  AI 彌勒_wiki_迦樓羅.md  AI 龍樹_wiki_度眾生.md  三世佛.md  三惡道.md  不動地.md  不善法.md  不退轉.md  佛功德.md  信願.md  偈頌.md  僧坊.md  僧徒_damaged.md  優婆提舍.md  光明遍照.md  分別心.md  利他.md  利養.md  受持讀誦.md  和合.md  善女人.md  善巧方便.md  (+95 more)
proxy/: __init__.py
scripts/: inject_dna.bat  run_cli.bat  run_proxy.bat
specs/: DROS-RFC-001.md  DROS-RFC-002.md  DROS-RFC-003.md
src/: config.py
tools/: dros_contract_ast.py  dros_guard_vm.py  (+3 more)
(+16887 files in other folders)
