[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dros"
version = "7.0.0"
description = "Dharma Reasoning OS - 具備本體論約束的法義推理作業系統"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GNU AGPLv3"}

dependencies = [
    "PyYAML>=6.0",
    "quart>=0.19.0",
    "quart-cors>=0.7.0",
    "uvicorn[standard]>=0.30.0",
    "google-generativeai>=0.8.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "ruff",
    "mypy",
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
# 綁定終端機全域指令
dros = "main:main"
dros-inject = "src.pipeline.dna_enricher:main"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py310"
